Remove rxjava2 from tests, fix, and adjust for Vert.x 5